--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{ site.data.metadata.title | default: 'Plain Vanilla GitHub Pages' }}</title>
+  <title>{{ site.data.metadata.title | default: 'The University Times' }}</title>
   <meta name="description" content="{{ site.data.metadata.description | default: 'Free, easy, low-tech website template using GitHub Pages' }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
