--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>{{ site.data.metadata.title | default: 'The University Times' }}</title>
-  <meta name="description" content="{{ site.data.metadata.description | default: 'Free, easy, low-tech website template using GitHub Pages' }}">
+  <title>{{ site.data.metadata.title | default: 'The University News' }}</title>
+  <meta name="description" content="{{ site.data.metadata.description | default: 'The University News' }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" href="favicon.ico" sizes="any">
